--- a/cardTwo.html
+++ b/cardTwo.html
@@ -33,7 +33,7 @@
         </div>
     </div>
     <div class = "pagination">
-        <a href = "./cardOne.html">Back</a>
+        <a href = "./index.html">Back</a>
         <a href = "./cardThree.html">Next</a>
     </div>
 </body>
