--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class = "card-main-container">
-            <div class = "card-container">
+            <div class = "card-container ">
                 <div class = "card-head-text">
                     <p>Trip to Paris</p>
                 </div>
@@ -26,31 +26,56 @@
                     <hr>
                     <p><del>Completed Task</del></p>
                 </div >
-                <div>
+                <div class = "check-box">
                     <input type ="checkbox" value = "pending-task">Pending Task
                 </div>
             </div>
+            
             <div class = "card-container">
                 <div class = "card-head-text">
-                    <p>My Todo List</p>
+                    <p>My Todo List 2</p>
                 </div>
                 <div class = "card-body-text">
                     <hr>
                     <p><del>Completed Task</del></p>
                 </div >
-                <div>
+                <div class = "check-box">
                     <input type ="checkbox" value = "pending-task">Pending Task
                 </div>
             </div>
             <div class = "card-container">
                 <div class = "card-head-text">
-                    <p>My Todo List</p>
+                    <p>My Todo List 3</p>
                 </div>
                 <div class = "card-body-text">
                     <hr>
                     <p><del>Completed Task</del></p>
                 </div >
-                <div>
+                <div class = "check-box">
+                    <input type ="checkbox" value = "pending-task">Pending Task
+                </div>
+            </div>
+            <div class = "card-container">
+                <div class = "card-head-text">
+                    <p>My Todo List 4</p>
+                </div>
+                <div class = "card-body-text">
+                    <hr>
+                    <p><del>Completed Task</del></p>
+                </div>
+                <div class = "check-box">
+                    <input type ="checkbox" value = "pending-task">Pending Task
+                </div>
+            </div>
+            <div class = "card-container">
+                <div class = "card-head-text">
+                    <p>My Todo List 5</p>
+                </div>
+                <div class = "card-body-text">
+                    <hr>
+                    <p><del>Completed Task</del></p>
+                </div>
+                <div class = "check-box">
                     <input type ="checkbox" value = "pending-task">Pending Task
                 </div>
             </div>
