--- a/cardTwo.html
+++ b/cardTwo.html
@@ -14,6 +14,10 @@
             <div class = "heading"><h1>Trip to Paris</h1></div>
             <div class="line"><hr></div>
         </div>
+        <div class = "mobile-head-block">
+            <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+            <span class = "heading"><h1>Trip to Paris</h1></span>
+        </div>
         <div class = "back">
             <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
             <span>Back</span>
