--- a/cardThree.html
+++ b/cardThree.html
@@ -3,19 +3,98 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Card Three</title>
     <link rel ="stylesheet" href="./cardThree.css">
 </head>
-<body>
-    <div class = "main">
-        <div class = "card-container">
-            <p>Add New List</p>
-            <input type = "text"><br/>
-            <button>ADD</button>
+<body class = "container">
+    <div class="main">
+        <div class ="cards-heading-container">
+            <div class = "head-text">
+                <p><b>Tasks</b> Lists</p>
+            </div>
+            <div class = "list-text">
+                <i class="fa fa-plus-circle"></i>&nbsp;&nbsp;<span>Add List</span>
+            </div>
+        </div>
+        <div class = "card-main-container">
+            <div class = "card-container ">
+                <div class = "card-head-text">
+                    <p>Trip to Paris</p>
+                </div>
+                <div class = "card-body-text">
+                    <hr>
+                    <p><del>Completed Task</del></p>
+                </div >
+                <div class = "check-box">
+                    <input type ="checkbox" value = "pending-task">Pending Task
+                </div>
+            </div>
+            
+            <div class = "card-container">
+                <div class = "card-head-text">
+                    <p>My Todo List 2</p>
+                </div>
+                <div class = "card-body-text">
+                    <hr>
+                    <p><del>Completed Task</del></p>
+                </div >
+                <div class = "check-box">
+                    <input type ="checkbox" value = "pending-task">Pending Task
+                </div>
+            </div>
+            <div class = "card-container">
+                <div class = "card-head-text">
+                    <p>My Todo List 3</p>
+                </div>
+                <div class = "card-body-text">
+                    <hr>
+                    <p><del>Completed Task</del></p>
+                </div >
+                <div class = "check-box">
+                    <input type ="checkbox" value = "pending-task">Pending Task
+                </div>
+            </div>
+            <div class = "card-container">
+                <div class = "card-head-text">
+                    <p>My Todo List 4</p>
+                </div>
+                <div class = "card-body-text">
+                    <hr>
+                    <p><del>Completed Task</del></p>
+                </div>
+                <div class = "check-box">
+                    <input type ="checkbox" value = "pending-task">Pending Task
+                </div>
+            </div>
+            <div class = "card-container">
+                <div class = "card-head-text">
+                    <p>My Todo List 5</p>
+                </div>
+                <div class = "card-body-text">
+                    <hr>
+                    <p><del>Completed Task</del></p>
+                </div>
+                <div class = "check-box">
+                    <input type ="checkbox" value = "pending-task">Pending Task
+                </div>
+            </div>
         </div>
         <div class = "pagination">
-            <a href = "./cardTwo.html">Back</a>
-            <a href = "./cardFour.html">Next</a>
+            <a href = "./cardTwo.html">Next</a>
+        </div>
+    </div>
+    <div class = "top-container">
+        <div class = "main-head">
+            <div class = "card-container-head">
+                <p>Add New List</p>
+                <input type = "text"><br/>
+                <button>ADD</button>
+            </div>
+            <div class = "pagination-head">
+                <a href = "./cardTwo.html">Back</a>
+                <a href = "./cardFour.html">Next</a>
+            </div>
         </div>
     </div>
 </body>
