--- a/cardFour.html
+++ b/cardFour.html
@@ -3,18 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Card Four</title>
     <link rel ="stylesheet" href="./cardFour.css">
 </head>
 <body>
-    <div class = "main">
-        <div class = "card-container">
-            <p>Add New Item</p>
-            <input type = "text"><br/>
-            <button>ADD</button>
+    <div class = "container">
+        <div class = "main">
+            <div class = "head-block">
+                <div class="line"><hr></div>
+                <div class = "heading"><h1>Trip to Paris</h1></div>
+                <div class="line"><hr></div>
+            </div>
+            <div class = "mobile-head-block">
+                <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+                <span class = "heading"><h1>Trip to Paris</h1></span>
+            </div>
+            <div class = "back">
+                <i class="fa fa-arrow-circle-left" aria-hidden="true"></i>
+                <span>Back</span>
+            </div>
+            <div class = "card-container">
+                <div class = "card-head-text">
+                    <p>Trip to Paris</p>
+                </div>
+                <div class = "card-body-text">
+                    <hr>
+                    <p><del>Completed Task</del></p>
+                </div >
+                <div>
+                    <input type ="checkbox" value = "pending-task">Pending Task
+                </div>
+                <i class="fa fa-plus-circle"></i>
+            </div>
+            <div class = "pagination">
+                <a href = "./index.html">Back</a>
+                <a href = "./cardThree.html">Next</a>
+            </div>
         </div>
-        <div class = "pagination">
-            <a href = "./cardThree.html">Back</a>
+    </div>
+    <div class = "top-container">
+        <div class = "main-head">
+            <div class = "card-container-head">
+                <p>Add New Todo</p>
+                <input type = "text"><br/>
+                <button>ADD</button>
+            </div>
+            <div class = "pagination-head">
+                <a href = "./cardThree.html">Back</a>
+            </div>
         </div>
     </div>
 </body>
